# zope.pluggableauth

./: .coveragerc  .gitignore  .meta.toml  .travis.yml  CHANGES.rst  CHANGES.txt  MANIFEST.in  README.rst  README.txt  buildout.cfg  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
src/zope/app/authentication/: generic.py  groupfolder.py  groupfolder.txt  idpicker.py  interfaces.py  session.py  testing.py  tests.py
src/zope/app/authentication/browser/: group_searching_with_empty_string.txt  loginform.py  register.py  special-groups.txt  tests.py
src/zope/pluggableauth/: README.rst  README.txt  __init__.py  authentication.py  configure.zcml  factories.py  ftesting.zcml  groupfolder.zcml  interfaces.py  password.py  password.zcml  placelesssetup.py  principalfactories.zcml  principalfolder.py  principalfolder.zcml  tests.py  vocabulary.py
src/zope/pluggableauth/browser/: __init__.py  adding.py  groupfolder.txt  loginform.pt  principalfolder.txt  schemasearch.py  schemasearch.txt  session.zcml
src/zope/pluggableauth/plugins/: ftpplugins.py  ftpplugins.zcml  generic.py  generic.zcml  groupfolder.py  groupfolder.rst  groupfolder.txt  groupfolder.zcml  httpplugins.py  idpicker.py  principalfolder.py  principalfolder.rst  principalfolder.txt  principalfolder.zcml  session.py  session.zcml
